Fixed Up References

--- a/ESBootstrap/Bridge/www/demo.html
+++ b/ESBootstrap/Bridge/www/demo.html
@@ -3,6 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Bridge ESBootstrap</title>
 
     <link rel="stylesheet" href="../output/bootstrap.min.css">
