--- a/ESBootstrap/Bridge/www/demo.html
+++ b/ESBootstrap/Bridge/www/demo.html
@@ -8,6 +8,7 @@
     <title>Bridge ESBootstrap</title>
 
     <link rel="stylesheet" href="../output/bootstrap.min.css">
+    <link rel="stylesheet" href="../output/todc-bootstrap.min.css">
 
     <script src="../output/jquery-1.12.0.min.js"></script>
     <script src="../output/bootstrap.min.js"></script>    
